--- a/src/includes/containers/ModalConfirmSendForm.pug
+++ b/src/includes/containers/ModalConfirmSendForm.pug
@@ -17,6 +17,7 @@
             +Select({
               iconPrepend: 'tio-search',
               showSearch: true,
+              multiple: true,
               placeholder: 'Tìm & thêm người nhận',
               options: [
                 { label: 'Người nhận 1', value: '1' },
