--- a/src/assets/css/components/Button.scss
+++ b/src/assets/css/components/Button.scss
@@ -6,8 +6,8 @@
     border-radius: 2px;
 
     &.btn-lg {
-      font-size: 14px;
-      line-height: 20px;
+      // font-size: 14px;
+      // line-height: 20px;
       padding: 4px 8px;
       border-radius: 5px;
     }
