--- a/src/assets/css/components/DatePicker.scss
+++ b/src/assets/css/components/DatePicker.scss
@@ -2,4 +2,14 @@
   .flatpickr-input {
     flex: 1 !important;
   }
+
+  &.with-arrow {
+    .input-group-append {
+      position: absolute;
+      height: 100%;
+      right: 0;
+      pointer-events: none;
+      background: #ffffff;
+    }
+  }
 }
