--- a/src/assets/css/components/Select.scss
+++ b/src/assets/css/components/Select.scss
@@ -39,7 +39,7 @@
 
     &.has-prepend {
       .custom-select {
-        padding-left: calc(16px * 2 + 4px);
+        padding-left: calc(16px + 4px);
       }
     }
   }
