--- a/src/bang-dieu-khien-nhan-vien.pug
+++ b/src/bang-dieu-khien-nhan-vien.pug
@@ -16,7 +16,7 @@ block pages
 
             .row 
               .col-lg-6.pr-lg-2
-                +Card({ className: 'mb-3', title: 'Sách mới đăng ký', fullHeight: true })
+                +Card({ className: 'mb-3', title: 'Sách mới đăng ký', fullHeight: true, noPadding: true })
                   .DashboardPage-job
                     each item in [1,2,3,4,5]
                       +JobCard({ order: `0${item}`, dark: item % 2 === 0 })
