--- a/src/quan-ly-xbp-chi-tiet-thong-tin-xuat-ban-pham.pug
+++ b/src/quan-ly-xbp-chi-tiet-thong-tin-xuat-ban-pham.pug
@@ -29,7 +29,7 @@ block pages
               })
 
             .accordion
-              +Accordion({ className: '', mainId: 'thongtinchung', id: 'Accordion1', parentId: 'AccordionParent', title: 'Thông tin chung về bản đắng ký xuất bản phẩm' })
+              +Accordion({ className: '', mainId: 'thongtinchung', id: 'Accordion1', parentId: 'AccordionParent1', title: 'Thông tin chung về bản đắng ký xuất bản phẩm' })
                 .row 
                   .col-md-6.pr-md-2.mb-3
                     +Table({})
@@ -63,7 +63,7 @@ block pages
                           td.text-nowrap #[strong Loại Xuất bản phẩm]
                           td.w-100 Sách giấy, Sách điện tử
 
-              +Accordion({ className: '', mainId: 'quanlycongviec', id: 'Accordion2', parentId: 'AccordionParent', title: 'Quản lý công việc (danh sách việc cần làm)', noPadding: true })
+              +Accordion({ className: '', mainId: 'quanlycongviec', id: 'Accordion2', parentId: 'AccordionParent2', title: 'Quản lý công việc (danh sách việc cần làm)', noPadding: true })
                 .border-bottom.background.px-4.py-3
                   h4.mb-0
                     <i class="tio-settings-outlined mr-2"></i>
@@ -147,7 +147,7 @@ block pages
                         +Checkbox({ title: '6. Ra quyết định in', labelId: 'Checkbox14' })
                           +Badge({ title: 'Tự động', className: 'ml-2', variant: 'badge-soft-success text-success' })
 
-              +Accordion({ className: '', mainId: 'banthaofile', id: 'Accordion3', parentId: 'AccordionParent', title: 'Bản thảo & FILE' })
+              +Accordion({ className: '', mainId: 'banthaofile', id: 'Accordion3', parentId: 'AccordionParent3', title: 'Bản thảo & FILE' })
                 form(action="#") 
                   +Tab({
                     className: 'mb-3',
@@ -186,9 +186,9 @@ block pages
                                   .Table-link.ellipsis Thế giới bên trong bất động sản: Mua, bán và tạo lợi nhuận trong thị trường bất động sản.
                                 td.text-nowrap 23:13’ 27/06/2022
 
-              +Accordion({ className: '', mainId: 'thongtinkhac', id: 'Accordion4', parentId: 'AccordionParent', title: 'Thông tin khác' })
+              +Accordion({ className: '', mainId: 'thongtinkhac', id: 'Accordion4', parentId: 'AccordionParent4', title: 'Thông tin khác' })
                 .accordion
-                  +Accordion({ id: 'AccordionSub2', parentId: 'AccordionSubParent', title: 'Thông tin Cơ bản', dark: true })
+                  +Accordion({ id: 'AccordionSub2', parentId: 'AccordionSubParent1', title: 'Thông tin Cơ bản', dark: true })
                     +Table({})
                       tbody
                         tr 
@@ -212,7 +212,7 @@ block pages
                           td.text-nowrap #[strong Đăng ký mới/ Tái bản]
                           td.w-100 Đăng ký mới
 
-                  +Accordion({ id: 'AccordionSub3', parentId: 'AccordionSubParent', title: 'Đối tượng sử dụng và phân loại', dark: true })
+                  +Accordion({ id: 'AccordionSub3', parentId: 'AccordionSubParent2', title: 'Đối tượng sử dụng và phân loại', dark: true })
                     .row
                       .col-md-6.pr-md-2.mb-3
                         +Table({})
@@ -237,7 +237,7 @@ block pages
                               td.text-nowrap #[strong Trình độ]
                               td.w-100
 
-                  +Accordion({ id: 'AccordionSub4', parentId: 'AccordionSubParent', title: 'Thông tin ngôn ngữ', dark: true })
+                  +Accordion({ id: 'AccordionSub4', parentId: 'AccordionSubParent3', title: 'Thông tin ngôn ngữ', dark: true })
                     .row
                       .col-md-6.pr-md-2.mb-3
                         +Table({})
@@ -263,7 +263,7 @@ block pages
                               td.text-nowrap #[strong Ngôn ngữ xuất bản]
                               td.w-100 Tiếng Việt
 
-                  +Accordion({ id: 'AccordionSub5', parentId: 'AccordionSubParent', title: 'Thông tin định dạng', dark: true })
+                  +Accordion({ id: 'AccordionSub5', parentId: 'AccordionSubParent4', title: 'Thông tin định dạng', dark: true })
                     .row
                       .col-md-6.pr-md-2.mb-3
                         +Table({})
@@ -312,7 +312,7 @@ block pages
                               td.text-nowrap #[strong Định dạng điện tử]
                               td.w-100 pdf
 
-                  +Accordion({ id: 'AccordionSub6', parentId: 'AccordionSubParent', title: 'Thông tin Bản quyền', dark: true })
+                  +Accordion({ id: 'AccordionSub6', parentId: 'AccordionSubParent5', title: 'Thông tin Bản quyền', dark: true })
                     .row
                       .col-md-6.pr-md-2.mb-3
                         +Table({})
@@ -337,7 +337,7 @@ block pages
                               td.text-nowrap #[strong Bản quyền từ]
                               td.w-100 27/09/2022
 
-                  +Accordion({ id: 'AccordionSub7', parentId: 'AccordionSubParent', title: 'Thông tin Hợp đồng xuất bản', dark: true })
+                  +Accordion({ id: 'AccordionSub7', parentId: 'AccordionSubParent6', title: 'Thông tin Hợp đồng xuất bản', dark: true })
                     .row
                       .col-md-6.pr-md-2.mb-3
                         +Table({})
@@ -360,7 +360,7 @@ block pages
                               td.w-100 27/09/2022
 
 
-              +Accordion({ className: '', mainId: 'lichsuxuatbanpham', id: 'Accordion5', parentId: 'AccordionParent', title: 'Lịch sử thao tác', showDate: true, noPadding: true })
+              +Accordion({ className: '', mainId: 'lichsuxuatbanpham', id: 'Accordion5', parentId: 'AccordionParent5', title: 'Lịch sử thao tác', showDate: true, noPadding: true })
                 +Table({ style: 'margin: -1px', showPagination: true })
                   tbody 
                     each item in [1,2,3,4,5]
@@ -368,7 +368,7 @@ block pages
                         td.text-center= item
                         td Nguyễn Đình Toàn đã sửa tên Xuất bản phẩm 23:13’ 27/06/2022
 
-              +Accordion({ className: '', mainId: 'binhluanvaduyet', id: 'Accordion6', parentId: 'AccordionParent', title: 'Bình luận và duyệt', showDate: true, noPadding: true })
+              +Accordion({ className: '', mainId: 'binhluanvaduyet', id: 'Accordion6', parentId: 'AccordionParent6', title: 'Bình luận và duyệt', showDate: true, noPadding: true })
                 +Table({ style: 'margin: -1px', showPagination: true })
                   thead 
                     tr 
